// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`2-only-current-version 1`] = `
"# Changelog

## [2.7.14](https://github.com/vuejs/vue/compare/v2.7.13...v2.7.14) (2022-11-09)

### Bug Fixes

a

## [2.7.13](https://github.com/vuejs/vue/compare/v2.7.12...v2.7.13) (2022-10-14)

b

## [2.7.12](https://github.com/vuejs/vue/compare/v2.7.11...v2.7.12) (2022-10-12)
"
`;

exports[`3-not-current-version 1`] = `
"<!-- Generated by pkg-name-for-test@vpkg-version-for-test, please do not modify manually!! -->

# v2.x 更新日志

## [2.7.14](https://github.com/vuejs/vue/compare/v2.7.13...v2.7.14) (2022-11-09)

### Bug Fixes

a

## [2.7.13](https://github.com/vuejs/vue/compare/v2.7.12...v2.7.13) (2022-10-14)

b

## [2.7.12](https://github.com/vuejs/vue/compare/v2.7.11...v2.7.12) (2022-10-12)
"
`;

exports[`3-not-current-version 2`] = `
"# Changelog

"
`;

exports[`4-has-many-versions 1`] = `
"<!-- Generated by pkg-name-for-test@vpkg-version-for-test, please do not modify manually!! -->

# v14.x 更新日志

# 14.2.10 (2022-11-09)

c

<!-- CHANGELOG SPLIT MARKER -->

"
`;

exports[`4-has-many-versions 2`] = `
"# Changelog

# 16.0.0-next.5 (2023-03-29)

## Breaking Changes

<!-- CHANGELOG SPLIT MARKER -->

# 16.0.0-next.4 (2023-03-22)

d
"
`;

exports[`4-has-many-versions 3`] = `
"<!-- Generated by pkg-name-for-test@vpkg-version-for-test, please do not modify manually!! -->

# v2.x 更新日志

## [2.7.14](https://github.com/vuejs/vue/compare/v2.7.13...v2.7.14) (2022-11-09)

### Bug Fixes

a

## [2.7.13](https://github.com/vuejs/vue/compare/v2.7.12...v2.7.13) (2022-10-14)

b

## [2.7.12](https://github.com/vuejs/vue/compare/v2.7.11...v2.7.12) (2022-10-12)

"
`;

exports[`5-has-ref-versions 1`] = `
"9.x changelog
"
`;

exports[`5-has-ref-versions 2`] = `
"<!-- Generated by pkg-name-for-test@vpkg-version-for-test, please do not modify manually!! -->

# v14.x 更新日志

# 14.2.10 (2022-11-09)

c

<!-- CHANGELOG SPLIT MARKER -->

"
`;

exports[`5-has-ref-versions 3`] = `
"# Changelog

# 16.0.0-next.5 (2023-03-29)

## Breaking Changes

<!-- CHANGELOG SPLIT MARKER -->

# 16.0.0-next.4 (2023-03-22)

d


"
`;

exports[`5-has-ref-versions 4`] = `
"<!-- Generated by pkg-name-for-test@vpkg-version-for-test, please do not modify manually!! -->

# v2.x 更新日志

## [2.7.14](https://github.com/vuejs/vue/compare/v2.7.13...v2.7.14) (2022-11-09)

### Bug Fixes

a

## [2.7.13](https://github.com/vuejs/vue/compare/v2.7.12...v2.7.13) (2022-10-14)

b

## [2.7.12](https://github.com/vuejs/vue/compare/v2.7.11...v2.7.12) (2022-10-12)

"
`;

exports[`5-has-ref-versions 5`] = `
"10.x changelog
"
`;
